[package]
name = "bacem2"
version = "0.1.0"
authors = ["walidbahrii <bahriwalid.promo1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
solana-program = "1.6.7"
thiserror = "1.0"